--- a/public/ExpenseTracker/index.html
+++ b/public/ExpenseTracker/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <form onsubmit="addNewExpense(event)">
-        <label for="expenseamount">Choose expenseamount:</label>
-        <input type="number" name="expenseamount" required> </input>
+        <label for="expense">Choose expense:</label>
+        <input type="number" name="expense" required> </input>
         <label for="description">Choose description:</label>
         <input type="text" name="description" required> </input>
         <label for="category">Choose a category:</label>
